# cquisitor-lib

./: .gitignore  API_DOCUMENTATION.md  Cargo.toml  README.md  WHAT-IS-COVERED.md  generate-types.sh  generator.ts  package.json  post-build.sh  schema-to-ts.js  tsconfig.json
src/: check_signatures.rs  common.rs  js_value.rs  lib.rs  schema_generator.rs
src/cbor/: cbor_decoder.rs  mod.rs
src/csl_decoders/: mod.rs  params.rs  specific_decoders.rs  universal_decoder.rs
src/plutus/: data_mapper.rs  decoder_tools.rs  execute_tx_scripts.rs  mod.rs  models.rs  plutus_decoder.rs  plutus_script_normalizer.rs
src/validators/: common.rs  helpers.rs  input_contexts.rs  mod.rs  protocol_params.rs  validation_result.rs  validator.rs  value.rs
src/validators/phase_1/: common.rs  converter.rs  errors.rs  helpers.rs  hints.rs  input_contexts.rs  mod.rs  validator.rs  value.rs
src/validators/phase_1/validation/: auxiliary_data.rs  balance.rs  collateral.rs  fee.rs  mod.rs  native_script_executor.rs  output.rs  registration.rs  transaction_limits.rs  witness.rs
src/validators/phase_2/: data_mapper.rs  errors.rs  eval_redeemer.rs  hints.rs  mod.rs  validation.rs
src/validators/tests/: validator.rs
types/: cquisitor_lib.d.ts
